HiveMQDeployment/hivemq-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: hivemq
  labels:
    app: hivemq-cluster
