HiveMQDeployment/hivemq-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: hivemq
  name: hivemq-discovery
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  selector:
    app: hivemq-cluster
  ports:
    - protocol: TCP
      port: 1883
      targetPort: 1883
  clusterIP: None
