HiveMQDeployment/hivemq-mqtt-service.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: hivemq
  name: hivemq-mqtt
spec:
  selector:
    app: hivemq-cluster
  ports:
    - protocol: TCP
      port: 1883
      targetPort: 1883
  #type: LoadBalancer
  type: ClusterIP
