HiveMQDeployment/hivemq-webui-service.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: hivemq
  name: hivemq-web-ui
spec:
  selector:
    app: hivemq-cluster
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  #sessionAffinity: ClientIP
  #type: LoadBalancer
  type: ClusterIP
