HiveMQDeployment/hivemq-webui-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: hivemq
  name: hivemq-webui-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: hivemq-webui
      protocol: TCP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: hivemq
  name: hivemq-webui-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - hivemq-webui-gateway
  tcp:
  - match:
    - port: 8080
      gateways:
        - hivemq-webui-gateway
    route:
    - destination:
        host: hivemq-web-ui.hivemq.svc.cluster.local
        port:
          number: 8080
